<resources>
    <string name="app_name">Calculator</string>
    <string name="_clear_all_sign">сa</string>
    <string name="_backspace_sign">◄</string>
    <string name="_percent_sign">%</string>
    <string name="_divide_sign">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_multiply_sign">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_minus_sign">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_plus_sign">+</string>
    <string name="_comma_sign">,</string>
    <string name="_0">0</string>
    <string name="_equally_sign">=</string>
    <string name="light_theme_resource">Светлая тема</string>
    <string name="dark_theme_resource">Темная тема</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="settings_txt">Настройки</string>
    <string name="app_theme_txt">Тема приложения</string>
    <string name="light_txt">Светлая</string>
    <string name="dark_txt">Темная</string>
    <string name="save_txt">Сохранить</string>
</resources>