<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/comma_button"
        style="@style/signButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_comma_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zero_button"
        app:layout_constraintHorizontal_weight="25"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/zero_button"
        style="@style/numberButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@+id/equally_button"
        app:layout_constraintHorizontal_weight="25"
        app:layout_constraintStart_toEndOf="@+id/comma_button"
        app:layout_constraintTop_toTopOf="@id/comma_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/equally_button"
        style="@style/mainSignButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_equally_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="50"
        app:layout_constraintStart_toEndOf="@+id/zero_button"
        app:layout_constraintTop_toTopOf="@id/zero_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/one_button"
        style="@style/numberButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@id/comma_button"
        app:layout_constraintEnd_toStartOf="@+id/two_button"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/two_button"
        style="@style/numberButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        app:layout_constraintEnd_toStartOf="@+id/three_button"
        app:layout_constraintStart_toEndOf="@+id/one_button"
        app:layout_constraintTop_toTopOf="@id/one_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/three_button"
        style="@style/numberButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        app:layout_constraintEnd_toStartOf="@+id/plus_button"
        app:layout_constraintStart_toEndOf="@+id/two_button"
        app:layout_constraintTop_toTopOf="@id/two_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/plus_button"
        style="@style/signButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_plus_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/three_button"
        app:layout_constraintTop_toTopOf="@id/three_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/four_button"
        style="@style/numberButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@id/one_button"
        app:layout_constraintEnd_toStartOf="@+id/five_button"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/five_button"
        style="@style/numberButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:layout_constraintEnd_toStartOf="@+id/six_button"
        app:layout_constraintStart_toEndOf="@+id/four_button"
        app:layout_constraintTop_toTopOf="@id/four_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/six_button"
        style="@style/numberButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        app:layout_constraintEnd_toStartOf="@+id/minus_button"
        app:layout_constraintStart_toEndOf="@+id/five_button"
        app:layout_constraintTop_toTopOf="@id/five_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/minus_button"
        style="@style/signButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_minus_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/six_button"
        app:layout_constraintTop_toTopOf="@id/six_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/seven_button"
        style="@style/numberButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@id/four_button"
        app:layout_constraintEnd_toStartOf="@+id/eight_button"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/eight_button"
        style="@style/numberButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        app:layout_constraintEnd_toStartOf="@+id/nine_button"
        app:layout_constraintStart_toEndOf="@+id/seven_button"
        app:layout_constraintTop_toTopOf="@id/seven_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nine_button"
        style="@style/numberButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        app:layout_constraintEnd_toStartOf="@+id/multiply_button"
        app:layout_constraintStart_toEndOf="@+id/eight_button"
        app:layout_constraintTop_toTopOf="@id/eight_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/multiply_button"
        style="@style/signButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_multiply_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nine_button"
        app:layout_constraintTop_toTopOf="@id/nine_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_all_button"
        style="@style/mainSignButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_clear_all_sign"
        app:layout_constraintBottom_toTopOf="@id/seven_button"
        app:layout_constraintEnd_toStartOf="@+id/backspace_button"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backspace_button"
        style="@style/signButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_backspace_sign"
        app:layout_constraintEnd_toStartOf="@+id/percent_button"
        app:layout_constraintStart_toEndOf="@+id/clear_all_button"
        app:layout_constraintTop_toTopOf="@id/clear_all_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/percent_button"
        style="@style/signButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_percent_sign"
        app:layout_constraintEnd_toStartOf="@+id/divide_button"
        app:layout_constraintStart_toEndOf="@+id/backspace_button"
        app:layout_constraintTop_toTopOf="@id/backspace_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/divide_button"
        style="@style/signButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_divide_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/percent_button"
        app:layout_constraintTop_toTopOf="@id/percent_button" />

    <TextView
        android:id="@+id/text_screen"
        style="@style/screenTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/_0"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@id/clear_all_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

